--- a/index.html
+++ b/index.html
@@ -5,11 +5,70 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Today Donate</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+
+    <section class="a">
+        <div class="b">
+            <h1 class="cc"><span class="or"> Skip</span> The Diet,</h1>
+            <h1 class=" cc">Just Eat Healthy</h1>
+            <h1 class="cc">With Food Network</h1>
+            <p class="abc3">Imagine you don't need a diet because we provide
+                healthy and delicious food for you!</p>
+            <a class="bt1" href="#">Order Food</a>
+        </div>
+        <div class="c">
+            <img class="i1" src="photo/Group 8450.png" alt="S.M.Rabiul Islam">
+        </div>
+    </section>
+    <section class="abc">
+        <div class="abc1">
+            <img class="i2" src="photo/Group 8447.png" alt="S.M.Rabiul Islam">
+        </div>
+        <div>
+            <h1 class="abc2">About Me</h1>
+            <p class="abc3">Lorem ipsum dolor sit amet, consectetur adipiscing
+                elit. Condimentum diam orci pretium a pharetra,
+                feugiat cursus. Dictumst risus, sem egestas odio cras
+                adipiscing vulputate. Nisi, risus in suscipit non. Non
+                commodo volutpat, pharetra, vel</p>
+            <a class="bt1" href="#">Contact me</a>
+        </div>
+    </section>
+    <section>
+
+        <!--section for contact us-->
+
+        <section class="contact">
+            <div class="con-1"></div>
+            <div class="con-2">
+                <div>
+                    <h1>Get My Updates</h1>
+                    <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+                        deterruisset. No duo populo animal noluisse, enim</p>
+                </div>
+                <div>
+                    <form action="form">
+                        <input type="text" id="fname" name="fname" value="John">
+                        <input type="submit" value="Submit">
+
+                    </form>
+                </div>
+            </div>
+            <div class="con-3"></div>
+        </section>
+
+        <!--For footer section-->
+        <section class="footer">
+            <div>
+                <h1 class="footer-h">Be Humble</h1>
+                <p class="footer-p">I’m gonna do it</p>
+                <p class="footer-copy">&copy2022 All Right Reserved</p>
+            </div>
+        </section>
 
 </body>
 
