--- a/index.html
+++ b/index.html
@@ -11,31 +11,31 @@
 
 <body>
 
-    <section class="a">
-        <div class="b">
-            <h1 class="cc"><span class="or"> Skip</span> The Diet,</h1>
-            <h1 class=" cc">Just Eat Healthy</h1>
-            <h1 class="cc">With Food Network</h1>
-            <p class="abc3">Imagine you don't need a diet because we provide
+    <section class="blog1">
+        <div class="blog1a">
+            <h1 class="blog1b"><span class="or"> Skip</span> The Diet,</h1>
+            <h1 class="blog1b">Just Eat Healthy</h1>
+            <h1 class="blog1b">With Food Network</h1>
+            <p class="blog1c">Imagine you don't need a diet because we provide
                 healthy and delicious food for you!</p>
             <a class="bt1" href="#">Order Food</a>
         </div>
-        <div class="c">
-            <img class="i1" src="photo/Group 8450.png" alt="S.M.Rabiul Islam">
+        <div class="blog1d">
+            <img class="image1" src="photo/donation12.png" alt="S.M.Rabiul Islam">
         </div>
     </section>
-    <section class="abc">
-        <div class="abc1">
-            <img class="i2" src="photo/Group 8447.png" alt="S.M.Rabiul Islam">
+    <section class="blog2">
+        <div class="blog2a">
+            <img class="image2" src="photo/donation13.jpg" alt="S.M.Rabiul Islam">
         </div>
         <div>
-            <h1 class="abc2">About Me</h1>
-            <p class="abc3">Lorem ipsum dolor sit amet, consectetur adipiscing
+            <h1 class="blog2c">About Me</h1>
+            <p class="blog2d">Lorem ipsum dolor sit amet, consectetur adipiscing
                 elit. Condimentum diam orci pretium a pharetra,
                 feugiat cursus. Dictumst risus, sem egestas odio cras
                 adipiscing vulputate. Nisi, risus in suscipit non. Non
                 commodo volutpat, pharetra, vel</p>
-            <a class="bt1" href="#">Contact me</a>
+            <a class="bt2" href="#">Contact me</a>
         </div>
     </section>
     <section>
