--- a/index.html
+++ b/index.html
@@ -11,13 +11,18 @@
 
 <body>
 
+    <!--section blog-->
+
     <section class="blog1">
         <div class="blog1a">
-            <h1 class="blog1b"><span class="or"> Skip</span> The Diet,</h1>
-            <h1 class="blog1b">Just Eat Healthy</h1>
-            <h1 class="blog1b">With Food Network</h1>
-            <p class="blog1c">Imagine you don't need a diet because we provide
-                healthy and delicious food for you!</p>
+            <h1 class="blog1b">Their lives depend on
+                <span class="or"> your donation</span>
+            </h1>
+            <p class="blog1c">Lorem ipsum dolor sit amet, usu cu esse possit
+                referrentur, at eam falli deterruisset. No duo populo
+                animal noluisse, enim
+                Lorem ipsum dolor sit amet, usu cu esse possit
+                referrentur, at eam falli deterruisset.</p>
             <a class="bt1" href="#">Order Food</a>
         </div>
         <div class="blog1d">
@@ -28,7 +33,7 @@
         <div class="blog2a">
             <img class="image2" src="photo/donation13.jpg" alt="S.M.Rabiul Islam">
         </div>
-        <div>
+        <div class="blog2e">
             <h1 class="blog2c">About Me</h1>
             <p class="blog2d">Lorem ipsum dolor sit amet, consectetur adipiscing
                 elit. Condimentum diam orci pretium a pharetra,
@@ -46,11 +51,11 @@
             <div class="con-1"></div>
             <div class="con-2">
                 <div>
-                    <h1>Get My Updates</h1>
-                    <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+                    <h1 class="contacth">Get My Updates</h1>
+                    <p class="contactp">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
                         deterruisset. No duo populo animal noluisse, enim</p>
                 </div>
-                <div>
+                <div class="forms">
                     <form action="form">
                         <input type="text" id="fname" name="fname" value="John">
                         <input type="submit" value="Submit">
