--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 animal noluisse, enim
                 Lorem ipsum dolor sit amet, usu cu esse possit
                 referrentur, at eam falli deterruisset.</p>
-            <a class="bt1" href="#">Order Food</a>
+            <a class="bt1" href="#">How to Contribute?</a>
         </div>
         <div class="blog1d">
             <img class="image1" src="photo/donation12.png" alt="S.M.Rabiul Islam">
@@ -31,16 +31,17 @@
     </section>
     <section class="blog2">
         <div class="blog2a">
-            <img class="image2" src="photo/donation13.jpg" alt="S.M.Rabiul Islam">
+            <img class="image2" src="photo/donation0.jpg" alt="S.M.Rabiul Islam">
         </div>
         <div class="blog2e">
-            <h1 class="blog2c">About Me</h1>
+            <h1 class="blog2c">They need us
+                to suvive</h1>
             <p class="blog2d">Lorem ipsum dolor sit amet, consectetur adipiscing
                 elit. Condimentum diam orci pretium a pharetra,
                 feugiat cursus. Dictumst risus, sem egestas odio cras
                 adipiscing vulputate. Nisi, risus in suscipit non. Non
                 commodo volutpat, pharetra, vel</p>
-            <a class="bt2" href="#">Contact me</a>
+            <a class="bt2" href="#">How to Contribute?</a>
         </div>
     </section>
     <section>
@@ -57,8 +58,8 @@
                 </div>
                 <div class="forms">
                     <form action="form">
-                        <input type="text" id="fname" name="fname" value="John">
-                        <input type="submit" value="Submit">
+                        <input class="input1" type="text" id="fname" name="fname" value="John">
+                        <input class="input2" type="submit" value="Submit">
 
                     </form>
                 </div>
