--- a/index.html
+++ b/index.html
@@ -11,6 +11,44 @@
 
 <body>
 
+    <!--Our donate plan-->
+
+    <section>
+        <div class="card-con">
+            <h1 class="card-con1">Our Donate Plan</h1>
+            <p class="card-con2">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+                deterruisset. No duo populo animal noluisse, enim</p>
+        </div>
+        <div class="card">
+            <div class="card1">
+                <img src="icons/food.png" alt="food.png">
+                <h3 class="cardh">Food for a family</h3>
+                <p class="cardp">Amet minim mollit non deserunt
+                    ullamco est sit aliqua dolor do amet
+                    sint. Velit officia consequat duis enim
+                    velit mollit.</p>
+            </div>
+            <div class="card2">
+                <img src="icons/shelter.png" alt="food.png">
+                <h3 class="cardh">Food for a family</h3>
+                <p class="cardp">Amet minim mollit non deserunt
+                    ullamco est sit aliqua dolor do amet
+                    sint. Velit officia consequat duis enim
+                    velit mollit.</p>
+            </div>
+            <div class="card3">
+                <img src="icons/Frame-1.png" alt="food.png">
+                <h3 class="cardh">Food for a family</h3>
+                <p class="cardp">Amet minim mollit non deserunt
+                    ullamco est sit aliqua dolor do amet
+                    sint. Velit officia consequat duis enim
+                    velit mollit.</p>
+            </div>
+        </div>
+    </section>
+
+
+
     <!--section blog-->
 
     <section class="blog1">
