--- a/index.html
+++ b/index.html
@@ -11,6 +11,39 @@
 
 <body>
 
+    <!--Donate Today section-->
+
+    <section>
+        <div class="card-con">
+            <h1 class="card-con1">Donate Today</h1>
+            <p class="card-con2">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+                deterruisset. No duo populo animal noluisse, enim</p>
+        </div>
+        <div class="donate">
+            <div class="donate1">
+                <h1>100tk</h1>
+            </div>
+            <div class="donate2">
+                <h1>100tk</h1>
+            </div>
+            <div class="donate1">
+                <h1>100tk</h1>
+            </div>
+            <div class="donate1">
+                <h1>100tk</h1>
+            </div>
+            <div class="donate1">
+                <h1>100tk</h1>
+            </div>
+        </div>
+        <div class="donet-form">
+            <form class=form1"" action="form">
+                <input class="input22" type="text" id="fname" name="fname" value="Other Amount (Taka)">
+                <input class="input222 type=" submit" value="Donate Now">
+            </form>
+        </div>
+    </section>
+
     <!--Our donate plan-->
 
     <section>
@@ -96,7 +129,7 @@
                 </div>
                 <div class="forms">
                     <form action="form">
-                        <input class="input1" type="text" id="fname" name="fname" value="John">
+                        <input class="input1" type="text" id="fname" name="fname" value="Email">
                         <input class="input2" type="submit" value="Submit">
 
                     </form>
