--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
     <!--Donate Today section-->
 
-    <section>
-        <div class="card-con">
+    <section class="sec">
+        <div class="card-com">
             <h1 class="card-con1">Donate Today</h1>
             <p class="card-con2">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
                 deterruisset. No duo populo animal noluisse, enim</p>
