--- a/index.html
+++ b/index.html
@@ -11,6 +11,22 @@
 
 <body>
 
+    <!--Bannar section-->
+
+    <section class="main-baner">
+        <div class="baner1">
+            <h1 class="banner-h">Let’s Help Those Who Are
+                More In Need
+            </h1>
+            <p class="ban-p">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+                deterruisset. No duo populo animal noluisse, enim</p>
+            <div class="baner-btn">
+                <a class="ban-btn" href="">Donate Now</a>
+            </div>
+        </div>
+
+    </section>
+
     <!--Donate Today section-->
 
     <section class="sec">
