--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Today Donate</title>
     <link rel="stylesheet" href="style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -62,7 +66,7 @@
 
     <!--Our donate plan-->
 
-    <section>
+    <section class="sec2">
         <div class="card-con">
             <h1 class="card-con1">Our Donate Plan</h1>
             <p class="card-con2">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
